==> noodlefighter/emcppbase-templates/target/fw/epaper/epaper.cpp <==
#include "epaper.h"
#include "epdfont.h"
#include "embase_platform.h"

void epd_res_set()
{
  GPIO_SetBits(GPIOC, GPIO_Pin_6);
}

void epd_res_reset()
{
  GPIO_ResetBits(GPIOC, GPIO_Pin_6);
}

void epd_dc_set()
{
  GPIO_SetBits(GPIOC, GPIO_Pin_7);
}

void epd_dc_reset()
{
  GPIO_ResetBits(GPIOC, GPIO_Pin_7);
}

void epd_cs_set()
{
  GPIO_SetBits(GPIOB, GPIO_Pin_12);
}

void epd_cs_reset()
{
  GPIO_ResetBits(GPIOB, GPIO_Pin_12);
}

uint8_t epd_is_busy()
{
  return GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_14) == Bit_RESET ? 0 : 1;
}

void epd_io_init(void)
{
  GPIO_InitTypeDef GPIO_InitStructure = {0};
  SPI_InitTypeDef spiConfig = {0};

#define LCD_EN_GPIO     GPIOC
#define LCD_EN_PIN      GPIO_Pin_1

  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Pin = LCD_EN_PIN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_EN_GPIO, &GPIO_InitStructure);
  GPIO_SetBits(LCD_EN_GPIO, LCD_EN_PIN);

  /* configure the epaper module res pin */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* configure the epaper module busy pin */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_14;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* configure the epaper module d/c pin */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOC, &GPIO_InitStructure);

  /* configure the epaper module spi2 sck mosi pin */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* configure the epaper module cs pin */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* configure spi2 */
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);

  spiConfig.SPI_DataSize = SPI_DataSize_8b;
  spiConfig.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;
  spiConfig.SPI_Direction = SPI_Direction_1Line_Tx;
  spiConfig.SPI_FirstBit = SPI_FirstBit_MSB;
  spiConfig.SPI_Mode = SPI_Mode_Master;
  spiConfig.SPI_CPOL = SPI_CPOL_High;
  spiConfig.SPI_CPHA = SPI_CPHA_2Edge;
  spiConfig.SPI_NSS = SPI_NSS_Soft;
  SPI_Init(SPI2, &spiConfig);
  SPI_Cmd(SPI2, ENABLE);
}
